# Car_price_prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  frontend.py  pyproject.toml  requirements.txt
notebooks/: best_xgb_model.pkl  data_preprocessing.ipynb  df_transformed.csv  model_training.ipynb  preprocessor.pkl
